--- a/index.html
+++ b/index.html
@@ -118,7 +118,34 @@
   </header>
 
 
+  <main>
+    <!-- 
+    - #Hero
+  -->
+    <section class="hero">
+      <div class="hero__wrapper">
+        <div class="hero__content">
+          <p class="hero__subtitle">
+            Cinema<strong>City</strong>
+          </p>
+          <h1 class="hero__title">
+            Unlimted <span>movies,</span> unlimited fun
+          </h1>
+          <p class="hero__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quisquam, quidem.
+          </p>
+        </div>
 
+        <button class="btn btn__primary">
+          <ion-icon name="play"></ion-icon>
+
+          <span>Watch now</span>
+        </button>
+      </div>
+
+    </section>
+  </main>
 
 
 
