--- a/index.html
+++ b/index.html
@@ -149,19 +149,20 @@
     <!-- 
     - #Upcoming
   -->
-    <sectiona class="upcoming">
+    <section class="upcoming">
 
       <div class="upcoming__wrapper">
-        <h2 class="upcoming__title">
+        <h2 class="section-title">
           Upcoming Movies
         </h2>
 
         <ul class="upcoming__list">
 
           <li class="upcoming__item">
-            <a href="./movie-details.html" class="upcoming__item-img">
+            <a href="./movie-details.html" class="upcoming__item-banner">
               <img src="./assets/images/upcoming-1.jpg" alt="upcoming-1">
             </a>
+
             <a href="./movie-details.html" class="upcoming__item-content">
               <h3 class="upcoming__item-title">
                 The Mandalorian
@@ -185,7 +186,7 @@
           </li>
 
           <li class="upcoming__item">
-            <a href="./movie-details.html" class="upcoming__item-img">
+            <a href="./movie-details.html" class="upcoming__item-banner">
               <img src="./assets/images/upcoming-2.jpg" alt="upcoming-2">
             </a>
             <a href="./movie-details.html" class="upcoming__item-content">
@@ -211,7 +212,7 @@
           </li>
 
           <li class="upcoming__item">
-            <a href="./movie-details.html" class="upcoming__item-img">
+            <a href="./movie-details.html" class="upcoming__item-banner">
               <img src="./assets/images/upcoming-3.jpg" alt="upcoming-3">
             </a>
             <a href="./movie-details.html" class="upcoming__item-content">
@@ -238,7 +239,7 @@
 
         </ul>
 
-        </section>
+    </section>
   </main>
 
 
