--- a/index.html
+++ b/index.html
@@ -150,17 +150,16 @@
     - #Upcoming
   -->
     <section class="upcoming">
-
       <div class="upcoming__wrapper">
         <h2 class="section-title">
           Upcoming Movies
         </h2>
 
-        <ul class="upcoming__list">
+        <ul class="upcoming__list scrollbar">
 
           <li class="upcoming__item">
             <a href="./movie-details.html" class="upcoming__item-banner">
-              <img src="./assets/images/upcoming-1.jpg" alt="upcoming-1">
+              <img src="./assets/images/upcoming-1.png" alt="upcoming-1">
             </a>
 
             <a href="./movie-details.html" class="upcoming__item-content">
@@ -187,7 +186,7 @@
 
           <li class="upcoming__item">
             <a href="./movie-details.html" class="upcoming__item-banner">
-              <img src="./assets/images/upcoming-2.jpg" alt="upcoming-2">
+              <img src="./assets/images/upcoming-2.png" alt="upcoming-2">
             </a>
             <a href="./movie-details.html" class="upcoming__item-content">
               <h3 class="upcoming__item-title">
@@ -213,7 +212,7 @@
 
           <li class="upcoming__item">
             <a href="./movie-details.html" class="upcoming__item-banner">
-              <img src="./assets/images/upcoming-3.jpg" alt="upcoming-3">
+              <img src="./assets/images/upcoming-3.png" alt="upcoming-3">
             </a>
             <a href="./movie-details.html" class="upcoming__item-content">
               <h3 class="upcoming__item-title">
