--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             Cinema<strong>City</strong>
           </p>
           <h1 class="hero__title">
-            Unlimted <span>movies,</span> unlimited fun
+            Unlimted <span>movies,</span>
+            TV shows, and more.
           </h1>
           <p class="hero__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Quisquam, quidem.
+            Watch anywhere. Cancel anytime.
           </p>
         </div>
 
@@ -275,28 +275,13 @@
 
         <div class="service__content">
           <p class="service__subtitle">our services</p>
-          <h2 class="service__title">Download your shows and watch offline</h2>
+          <h2 class="service__title">Download your shows to watch offline</h2>
           <p class="service__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Repellendus nostrum magni ullam exercitationem modi culpa eos vero
-            libero.
+            Save your favorites easily and always have something to watch.
           </p>
         </div>
 
         <ul class="service__list">
-          <li class="service__item">
-            <div class="service__item-icon">
-              <ion-icon name="tv"></ion-icon>
-            </div>
-            <div class="service__item-content">
-              <h3 class="service__item-title">
-                Watch now Everywhere
-              </h3>
-              <p class="service__item-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quidem.
-              </p>
-          </li>
 
           <li class="service__item">
             <div class="service__item-icon">
@@ -304,28 +289,27 @@
             </div>
             <div class="service__item-content">
               <h3 class="service__item-title">
-                Watch now Everywhere
+                Enjoy on your TV
               </h3>
               <p class="service__item-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quidem.
+                Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+                players, and more.
               </p>
           </li>
 
           <li class="service__item">
             <div class="service__item-icon">
-              <ion-icon name="tv"></ion-icon>
+              <ion-icon name="videocam"></ion-icon>
             </div>
             <div class="service__item-content">
               <h3 class="service__item-title">
-                Watch now Everywhere
+                Watch everywhere.
               </h3>
               <p class="service__item-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quidem.
+                Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV
+                without paying more.
               </p>
           </li>
-
 
         </ul>
       </div>
