--- a/index.html
+++ b/index.html
@@ -403,6 +403,31 @@
         </ul>
       </div>
     </section>
+
+
+    <!-- 
+        - #CTA
+      -->
+
+    <section class="cta">
+      <div class="cta__wrapper">
+
+        <div class="cta__content">
+          <h2 class="cta__title">Trial start first 30 days.</h2>
+
+          <p class="cta__text">
+            Enter your email to create or restart your membership.
+          </p>
+        </div>
+
+        <form action="" class="cta__form">
+          <input type="email" name="email" required placeholder="Enter your email"
+            class="email-field">
+
+          <button type="submit" class="cta__form-btn">Get started</button>
+        </form>
+
+      </div>
   </main>
 
 
