--- a/index.html
+++ b/index.html
@@ -428,6 +428,120 @@
         </form>
 
       </div>
+    </section>
+
+    <!-- 
+    - #FOOTER
+  -->
+
+    <footer class="footer">
+
+      <div class="footer__top">
+        <div class="footer__wrapper">
+
+          <div class="footer__brand">
+
+            <a href="./index.html" class="logo">
+              <img src="./assets/images/logo.svg" alt="CinemaCity logo">
+            </a>
+
+            <ul class="footer__list">
+
+              <li>
+                <a href="./index.html" class="footer__link">Home</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer__link">Movie</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer__link">TV Show</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer__link">Web Series</a>
+              </li>
+
+              <li>
+                <a href="#" class="footer__link">Pricing</a>
+              </li>
+
+            </ul>
+
+          </div>
+
+          <div class="divider"></div>
+
+          <div class="quicklink">
+
+            <ul class="quicklink__list">
+
+              <li>
+                <a href="#" class="quicklink-link">Faq</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Help center</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Terms of use</a>
+              </li>
+
+              <li>
+                <a href="#" class="quicklink-link">Privacy</a>
+              </li>
+
+            </ul>
+
+            <ul class="social__list">
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-pinterest"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <div class="footer__wrapper">
+
+          <p class="footer__copyright">
+            &copy; 2022 <a href="#">codewithsadee</a>. All Rights Reserved
+          </p>
+
+          <img src="./assets/images/footer__bottom-img.png"
+            alt="Online banking companies logo" class="footer-bottom-img">
+
+        </div>
+      </div>
+
+    </footer>
   </main>
 
 
