--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <!-- 
     - #Header
   -->
+
   <header class="header" data-header>
 
     <div class="header__wrapper">
@@ -123,6 +124,7 @@
     <!-- 
     - #Hero
   -->
+
     <section class="hero">
       <div class="hero__wrapper">
         <div class="hero__content">
@@ -150,6 +152,7 @@
     <!-- 
     - #Upcoming
   -->
+
     <section class="upcoming">
       <div class="upcoming__wrapper">
         <h2 class="section-title">
@@ -270,6 +273,7 @@
     <!-- 
     - #Service
   -->
+
     <section class="service">
       <div class="service__wrapper">
 
@@ -318,6 +322,7 @@
     <!-- 
     - #Series
   -->
+
     <section class="series">
       <div class="series__wrapper">
         <h2 class="section-title">
@@ -422,7 +427,7 @@
 
         <form action="" class="cta__form">
           <input type="email" name="email" required placeholder="Enter your email"
-            class="email-field">
+            class="cta__form-input">
 
           <button type="submit" class="cta__form-btn">Get started</button>
         </form>
