--- a/index.html
+++ b/index.html
@@ -428,7 +428,6 @@
         <form action="" class="cta__form">
           <input type="email" name="email" required placeholder="Enter your email"
             class="cta__form-input">
-
           <button type="submit" class="cta__form-btn">Get started</button>
         </form>
 
@@ -440,112 +439,98 @@
   -->
 
     <footer class="footer">
+      <div class="footer__wrapper">
 
-      <div class="footer__top">
-        <div class="footer__wrapper">
+        <div class="footer__brand">
 
-          <div class="footer__brand">
-
-            <a href="./index.html" class="logo">
-              <img src="./assets/images/logo.svg" alt="CinemaCity logo">
+          <div class="logo footer__brand-logo">
+            <a href="./index.html">
+              <img src="./assets/images/logo.svg" alt="logo">
             </a>
-
-            <ul class="footer__list">
-
-              <li>
-                <a href="./index.html" class="footer__link">Home</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer__link">Movie</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer__link">TV Show</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer__link">Web Series</a>
-              </li>
-
-              <li>
-                <a href="#" class="footer__link">Pricing</a>
-              </li>
-
-            </ul>
-
+            <h5>Cinema <span>City</span></h5>
           </div>
 
-          <div class="divider"></div>
+          <ul class="footer__list">
 
-          <div class="quicklink">
+            <li>
+              <a href="./index.html" class="footer__link">Home</a>
+            </li>
 
-            <ul class="quicklink__list">
+            <li>
+              <a href="#" class="footer__link">Movie</a>
+            </li>
 
-              <li>
-                <a href="#" class="quicklink-link">Faq</a>
-              </li>
+            <li>
+              <a href="#" class="footer__link">TV Show</a>
+            </li>
 
-              <li>
-                <a href="#" class="quicklink-link">Help center</a>
-              </li>
+            <li>
+              <a href="#" class="footer__link">Web Series</a>
+            </li>
 
-              <li>
-                <a href="#" class="quicklink-link">Terms of use</a>
-              </li>
+            <li>
+              <a href="#" class="footer__link">Pricing</a>
+            </li>
 
-              <li>
-                <a href="#" class="quicklink-link">Privacy</a>
-              </li>
-
-            </ul>
-
-            <ul class="social__list">
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-pinterest"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a href="#" class="social-link">
-                  <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
+          </ul>
 
         </div>
-      </div>
 
-      <div class="footer__bottom">
-        <div class="footer__wrapper">
+        <div class="divider"></div>
 
-          <p class="footer__copyright">
-            &copy; 2022 <a href="#">codewithsadee</a>. All Rights Reserved
-          </p>
+        <div class="quicklink">
 
-          <img src="./assets/images/footer__bottom-img.png"
-            alt="Online banking companies logo" class="footer-bottom-img">
+          <ul class="quicklink__list">
+
+            <li>
+              <a href="#" class="quicklink-link">Faq</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Help center</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Terms of use</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Privacy</a>
+            </li>
+
+          </ul>
+
+          <ul class="quicklink__social">
+
+            <li>
+              <a href="#" class="quicklink__social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink__social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink__social-link">
+                <ion-icon name="logo-pinterest"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink__social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
+
+          </ul>
 
         </div>
-      </div>
 
+      </div>
     </footer>
   </main>
 
