--- a/movie-details.html
+++ b/movie-details.html
@@ -28,7 +28,196 @@
 </head>
 
 <body id="top">
+  <main>
+    <!-- 
+    - #Header
+  -->
+    <header class="header" data-header>
 
+      <div class="header__wrapper">
+
+        <div class="overlay " data-overlay></div>
+
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./assets/images/logo.svg" alt="logo">
+          </a>
+          <h5>Cinema <span>City</span></h5>
+        </div>
+
+        <div class="navbar__actions">
+          <button>
+            <ion-icon name="search-outline"></ion-icon>
+          </button>
+
+          <div class="lang-container">
+            <label for="language">
+              <ion-icon name="globe-outline"></ion-icon>
+            </label>
+
+            <select name="language" id="language">
+              <option value="en">English</option>
+              <option value="fr">Français</option>
+              <option value="de">Deutsch</option>
+              <option value="es">Español</option>
+            </select>
+          </div>
+        </div>
+
+        <button class="menu-btn" data-open-btn>
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+        <nav class="navbar" data-navbar>
+
+          <div class="navbar__header">
+            <div class="logo">
+              <a href="./index.html">
+                <img src="./assets/images/logo.svg" alt="logo">
+              </a>
+              <h5>Cinema <span>City</span></h5>
+            </div>
+            <button class="menu-btn" data-close-btn>
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
+
+          </div>
+
+          <ul class="navbar__list">
+            <li>
+              <a href="./index.html" class="navbar__link">Home</a>
+            </li>
+
+            <li>
+              <a href="#" class="navbar__link">Movies</a>
+            </li>
+
+            <li>
+              <a href="#" class="navbar__link">Tv Show</a>
+            </li>
+
+            <li>
+              <a href="#" class="navbar__link">Web Series</a>
+            </li>
+          </ul>
+
+          <div class="navbar__social">
+            <a href="#" class="navbar__social-item">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+            <a href="#" class="navbar__social-item">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a href="#" class="navbar__social-item">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </div>
+
+        </nav>
+      </div>
+
+    </header>
+
+
+    <!-- 
+    - #Movie Details
+  -->
+    <section></section>
+
+    <!-- 
+    - #FOOTER
+  -->
+    <footer class="footer">
+      <div class="footer__wrapper">
+
+        <div class="footer__brand">
+
+          <a href="./index.html" class="footer__brand-logo">
+            <img src="./assets/images/logo.svg" alt="CinemaCity logo">
+          </a>
+
+          <ul class="footer__list">
+
+            <li>
+              <a href="./index.html" class="footer__link">Home</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer__link">Movie</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer__link">TV Show</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer__link">Web Series</a>
+            </li>
+
+            <li>
+              <a href="#" class="footer__link">Pricing</a>
+            </li>
+
+          </ul>
+
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="quicklink">
+
+          <ul class="footer__list quicklink-list">
+
+            <li>
+              <a href="#" class="quicklink-link">Faq</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Help center</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Terms of use</a>
+            </li>
+
+            <li>
+              <a href="#" class="quicklink-link">Privacy</a>
+            </li>
+
+          </ul>
+
+          <ul class="footer__list social-list">
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-pinterest"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
+
+          </ul>
+
+        </div>
+
+      </div>
+    </footer>
   </main>
 
   <!-- 
