--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="navbar__actions">
-        <button>
+        <button class="search-btn">
           <ion-icon name="search-outline"></ion-icon>
         </button>
 
