--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           Upcoming Movies
         </h2>
 
-        <ul class="upcoming__list ">
+        <ul class="upcoming__list scrollbar">
 
           <li class="upcoming__item">
             <a href="./movie-details.html" class="upcoming__item-banner">
@@ -329,7 +329,7 @@
           Tv Series
         </h2>
 
-        <ul class="series__list ">
+        <ul class="series__list scrollbar">
           <li class="series__item">
             <a href="./movie-details.html" class="series__item-banner">
               <img src="./assets/images/series-1.jpg" alt="series-1">
