--- a/movie-details.html
+++ b/movie-details.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="navbar__actions">
-          <button>
+          <button class="search-btn">
             <ion-icon name="search-outline"></ion-icon>
           </button>
 
@@ -123,43 +123,44 @@
     - #Movie Details
   -->
     <section class="movie-details">
-      <figure class="movie-details__banner">
-        <img src="./assets/images/series-1.jpg" alt="movie-details-1">
-        <div class="play-btn">
-          <ion-icon name="play-circle-outline">
-          </ion-icon>
+      <div class="movie-details__wrapper">
+        <figure class="movie-details__banner">
+          <img src="./assets/images/series-1.jpg" alt="movie-details-1">
+          <div class="play-btn">
+            <ion-icon name="play-circle-outline">
+            </ion-icon>
+          </div>
+
+        </figure>
+
+        <div class="movie-details__content">
+          <h1 class="movie-details__title">
+            The Sandman
+          </h1>
+
+          <div class="movie-details__stats">
+            <div class="box">
+              <ion-icon name="videocam-outline"></ion-icon>
+              <data>Trailer</data>
+            </div>
+
+            <div class="box">
+              <data>HD</data>
+            </div>
+
+            <div class="box">
+              <ion-icon name="star"></ion-icon>
+              <data>7.8</data>
+            </div>
+          </div>
+
+          <p class="movie-details__text">
+            Upon escaping after decades of imprisonment by a mortal wizard, Dream, the
+            personification of dreams, sets about to reclaim his lost equipment.
+          </p>
         </div>
 
-      </figure>
-
-      <div class="movie-details__content">
-        <h1 class="movie-details__title">
-          The Sandman
-        </h1>
-
-        <div class="movie-details__stats">
-          <div class="box">
-            <ion-icon name="videocam-outline"></ion-icon>
-            <data>Trailer</data>
-          </div>
-
-          <div class="box">
-            <data>HD</data>
-          </div>
-
-          <div class="box">
-            <ion-icon name="star"></ion-icon>
-            <data>7.8</data>
-          </div>
-        </div>
-
-        <p class="movie-details__text">
-          Upon escaping after decades of imprisonment by a mortal wizard, Dream, the
-          personification of dreams, sets about to reclaim his lost equipment.
-        </p>
       </div>
-
-
     </section>
 
 
@@ -260,9 +261,12 @@
 
         <div class="footer__brand">
 
-          <a href="./index.html" class="footer__brand-logo">
-            <img src="./assets/images/logo.svg" alt="CinemaCity logo">
-          </a>
+          <div class="logo footer__brand-logo">
+            <a href="./index.html">
+              <img src="./assets/images/logo.svg" alt="logo">
+            </a>
+            <h5>Cinema <span>City</span></h5>
+          </div>
 
           <ul class="footer__list">
 
@@ -294,7 +298,7 @@
 
         <div class="quicklink">
 
-          <ul class="footer__list quicklink-list">
+          <ul class="quicklink__list">
 
             <li>
               <a href="#" class="quicklink-link">Faq</a>
@@ -314,28 +318,28 @@
 
           </ul>
 
-          <ul class="footer__list social-list">
+          <ul class="quicklink__social">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="#" class="quicklink__social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="#" class="quicklink__social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="#" class="quicklink__social-link">
                 <ion-icon name="logo-pinterest"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="#" class="quicklink__social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
